<resources>
    <string name="app_name">TourMateNewProject</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="user_password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_maps">NearByActivity</string>

    //map
    <string name="API_KEY">AIzaSyA5lNyJH60fIJ_u5VLxFrBPZRx7A-qYU6c</string>
    <string name="map_default">Default</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="todo">TODO</string>

    <color name="primaryColor">#12A058</color>
    <color name="primaryDarkColor">#12A058</color>
    <color name="accentColor">#12A058</color>
</resources>