<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/custom_toolbar_design" />


        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/login"
            android:textColor="#FF69B4"
            android:textSize="25sp"
            android:padding="10dp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/launch_icon"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutId"
            android:layout_width="match_parent"
            android:padding="30dp"

            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
            tools:layout_editor_absoluteX="30dp">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext_design"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="6dp"
                android:drawablePadding="5dp"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUserEmailPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_edittext_design"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/user_password"
                android:drawablePadding="5dp"
                android:inputType="numberPassword"
                android:padding="6dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/etUserEmail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/forgot_password"
                android:textStyle="italic|bold"
                android:textSize="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUserEmailPass" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUserLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button_design"
                android:padding="6dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic|bold"
                app:layout_constraintTop_toBottomOf="@+id/tvForgotPass" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/btnUserLogin">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="Are you not registered ?"
                    android:textSize="13sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/sign_up"
                    android:textColor="#FF69B4"
                    android:textSize="15sp"
                    android:textStyle="italic|bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvAccount" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>