<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.PasswordResetActivity">


        <TextView
            android:id="@+id/tvNameForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:padding="10dp"
            android:text="Forgot Password"
            android:textColor="#ff69b4"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutIdSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameForgotPass">


            <EditText
                android:id="@+id/etEmailFP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_edittext_design"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="6dp"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etPasswordFP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_edittext_design"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:hint="New Password"
                android:inputType="numberPassword"
                android:padding="6dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/etEmailFP" />

            <EditText
                android:id="@+id/etConfirmPassFP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_edittext_design"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="5dp"
                android:hint="@string/confirm_password"
                android:inputType="numberPassword"
                android:padding="6dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordFP" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_button_design"
                android:text="Reset"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic|bold"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassFP"
                tools:layout_editor_absoluteX="1dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnReset">

                <TextView
                    android:id="@+id/tvResetComplete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="Successfully Reset Password?"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@+id/tvLoginFP"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvLoginFP" />

                <TextView
                    android:id="@+id/tvLoginFP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="@string/sign_in"
                    android:textColor="#FF69B4"
                    android:textSize="16sp"
                    android:textStyle="italic|bold"
                    app:layout_constraintStart_toEndOf="@+id/tvResetComplete"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

